--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,6 +7,11 @@ jobs:
     docker:
       # specify the version
       - image: circleci/golang:1.8
+        environment:
+            GO_EXEC_NAME: orbitmanhttp
+            GO_BUILD_PATH: ./main.go
+            ORG_NAME: bgonza2017
+            REPO_NAME: orbitmanhttp
 
       # Specify service dependencies here if necessary
       # CircleCI maintains a library of pre-built images
