--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,6 +12,8 @@ jobs:
             GO_BUILD_PATH: ./main.go
             ORG_NAME: bgonza2017
             REPO_NAME: orbitmanhttp
+            GO_EXEC_NAME: orbitmanhttp-server
+            GO_BUILD_PATH: ./
 
       # Specify service dependencies here if necessary
       # CircleCI maintains a library of pre-built images
@@ -24,8 +26,15 @@ jobs:
     ####   /go/src/bitbucket.org/circleci/go-tool
     working_directory: /go/src/github.com/{{ORG_NAME}}/{{REPO_NAME}}
     steps:
+      #pull the source code
       - checkout
 
       # specify any bash command here prefixed with `run: `
       #- run: go get -v -t -d ./...
-      - run: go test -v 
+      - run: go test -v
+
+      # execute the build
+      - run: go build -o $GO_EXEC_NAME $GO_BUILD_PATH
+
+      # setup docker
+      - setup_remote_docker
