--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,6 +15,7 @@ jobs:
             GO_EXEC_NAME: orbitmanhttp
             GO_BUILD_PATH: ./
             DOCKER_IMAGE_NAME: orbitmanhttp
+            PROJECT_ID: servergo
 
       # Specify service dependencies here if necessary
       # CircleCI maintains a library of pre-built images
@@ -33,9 +34,9 @@ jobs:
             echo $GCLOUD_SERVICE_KEY | base64 -d > ${HOME}/gcloud-service-key.json
             export GOOGLE_APPLICATION_CREDENTIALS=${HOME}/gcloud-service-key.json
             cat ${HOME}/gcloud-service-key.json
-            sudo /opt/google-cloud-sdk/bin/gcloud --quiet components update
-            sudo /opt/google-cloud-sdk/bin/gcloud auth activate-service-account --key-file ${HOME}/gcloud-service-key.json
-            sudo /opt/google-cloud-sdk/bin/gcloud config set project $PROJECT_ID
+            gcloud --quiet components update
+            gcloud auth activate-service-account --key-file ${HOME}/gcloud-service-key.json
+            gcloud config set project $PROJECT_ID
 
 
       #pull the source code
