--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -34,9 +34,9 @@ jobs:
             echo $GCLOUD_SERVICE_KEY | base64 -d > ${HOME}/gcloud-service-key.json
             export GOOGLE_APPLICATION_CREDENTIALS=${HOME}/gcloud-service-key.json
             cat ${HOME}/gcloud-service-key.json
-            gcloud --quiet components update
-            gcloud auth activate-service-account --key-file ${HOME}/gcloud-service-key.json
-            gcloud config set project $PROJECT_ID
+            sudo gcloud --quiet components update
+            sudo gcloud auth activate-service-account --key-file ${HOME}/gcloud-service-key.json
+            sudo gcloud config set project $PROJECT_ID
 
 
       #pull the source code
